backpack/src/snapshots/backpack__swapper__tests__render_swaps.snap
---
source: backpack/src/swapper.rs
expression: swaps
---
- key: key
  val_template: "Hello {{world}}"
  val: Hello crewl world
  path: ~
  kind: all

