backpack/src/snapshots/backpack__swapper__tests__render_swaps_inflections.snap
---
source: backpack/src/swapper.rs
expression: swaps
---
- key: key
  val_template: "Hello {{world | kebab_case}}"
  val: Hello crewl-world
  path: ~
  kind: all

